vlib/v/parser/tests/cannot_cast_to_struct.vv
struct Abc {}
struct Xyz {}
type Alphabet = Abc | Xyz

struct Test {
	abc Alphabet
}

fn main() {
	_ := Test(Abc{})
}
